Directives without assignment

--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,2 +1,1 @@
-<hr>
-<p>Server with Id {{serverID}} is {{getServerStatus()}} </p>
+<p [ngStyle]="{backgroundColor: getColor()}" [ngClass]="{online:serverStatus === 'online'}" >Server with Id {{serverID}} is {{getServerStatus()}} </p>
