--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -2,7 +2,8 @@
 <!--<input type="text" class="form-control" (input)="onUpdateServerName($event)">-->
 <input type="text" class="form-control" [(ngModel)]=serverName>
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click) = "onCreateServer()" >Add Server</button>
-<p> {{serverCreationStatus}} </p>
-<hr>
-<app-server></app-server>
-<app-server></app-server>
+<p *ngIf="serverCreated">Server was created, server name is {{serverName}} </p>
+<app-server *ngFor = "let server of servers"> {{server}}
+ </app-server>
+ <hr>
+ <button class="btn btn-primary"></button>
